   changed. Now it's called "loop filter" and the possible values are:
   "Enabled", "Skip (always)" and "Skip only on HD videos". If the last option
   is selected, the loop filter will be skipped if the codec for the video is
   "ffh264" and the width of the video is 1024 or greater (this value is
   subject to change, possibly in the future it could be configured by the 
   user).

(2007-12-20)
 * (Windows) Added a new option for the config file: use_short_pathnames.
   If set to true, smplayer will pass to mplayer the short filename(8+3)
   to mplayer. This allows to play files which contains characters outside 
   the local codepage (mplayer bug). Currently this only works with the file
   to play, not with subtitles filenames or other filenames that smplayer 
   might pass to mplayer.
   To test: I don't know if this would break compatibility with Win98.
 * (Windows) Added an option in Preferences->Advanced to enable easily the
   option mentioned above.
 * Added patch by profoX to add support for the mplayer output when compiled
   with -enable-color-console.
 
(2007-12-18)
 * Moved the letterbox option to the filters submenu and renamed to 
   "Add black borders".
 * Added the new option Video->Filters->Software scaling. Makes mplayer to
   scale the video up to the width of your screen. This is slow, you'll need
   a really fast computer.

(2007-12-17)
 * Updated the Russian translation, and added regular expressions 
   (Advanced->MPlayer language) for Russian, sent by wiselord1983@gmail.com
 * Added patch by Florin Braghis <florin@libertv.ro> to support Win 98.
   Modified a little bit by me to allow it to compile under linux (for testing).
 * Added a new option: Video->Letterbox. It adds a black border around the
   video, according to the aspect ratio of the monitor.
 * Simplified the aspect ratio menu. The options "4:3 Letterbox", 
   "16:9 Letterbox", "4:3 Panscan", "4:3 to 16:9" have been deleted. The first