@@ -11,6 +11,8 @@
    "ffh264" and the width of the video is 1024 or greater (this value is
    subject to change, possibly in the future it could be configured by the 
    user).
+ * Support for colored console output is disabled under Windows. I don't 
+   know any build compiled with that option.
 
 (2007-12-20)
  * (Windows) Added a new option for the config file: use_short_pathnames.
